--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ world1.zip
 world_dedicated.db
 world_dedicated.fwl
 world_dedicated.zip
+Bodylande.db
+Bodylande.fwl
+Bodylande.fwl.old
+UwuWorld_backup_20220730-185456.db
+UwuWorld_backup_20220730-185456.fwl
+UwuWorld.db.old
+UwuWorld.fwl.old
