--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ world1.zip
 world_dedicated.db
 world_dedicated.fwl
 world_dedicated.zip
+UwuWorld.db
+UwuWorld.db.old
+UwuWorld.fwl
+UwuWorld.fwl.old
