Remove unnecesary files

--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,15 @@
 Dedicated_backup_20221214-075002.db
 Dedicated_backup_20221214-075002.fwl
 single.db
-single.db.old
 single.fwl
-single.fwl.old
 steam_autocloud.vdf
 world1.db
-world1.db.old
 world1.db.zip
 world1.fwl
-world1.fwl.old
 world1.zip
 world_dedicated.db
 world_dedicated.fwl
 world_dedicated.zip
 UwuWorld.db
-UwuWorld.db.old
 UwuWorld.fwl
-UwuWorld.fwl.old
+*.old
